--- a/Translations/Twikey.is-IS.xlf
+++ b/Translations/Twikey.is-IS.xlf
@@ -194,7 +194,7 @@
           <note from="Xliff Generator" annotates="general" priority="3">Table SCA.TWI.TwikeyDocument - Field Customer No. - Property Caption</note>
         </trans-unit>
         <trans-unit id="Table 4091800859 - Field 2326231102 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
-          <source>Document Id</source><target>Kenni skjals</target>
+          <source>Document Id</source><target>Kenni fylgiskjals</target>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Table SCA.TWI.TwikeyDocument - Field Document Id - Property Caption</note>
         </trans-unit>
@@ -318,6 +318,36 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Table SCA.TWI.TwikeyRegistration - Field Twikey Invoice Id - Property Caption</note>
         </trans-unit>
+        <trans-unit id="Table 2376476057 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Twikey Service Registration</source><target>Twikey Service Skráning</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table SCA.TWI.TwikeyServiceRegistr - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Table 2376476057 - Field 883711285 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Entry No.</source><target>Færslunr.</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table SCA.TWI.TwikeyServiceRegistr - Field Entry No. - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Table 2376476057 - Field 2641924796 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Invoice Payment URL</source><target>Greiðsluslóð reiknings</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table SCA.TWI.TwikeyServiceRegistr - Field Invoice Payment URL - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Table 2376476057 - Field 2452959191 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Invoice Status</source><target>Staða reiknings</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table SCA.TWI.TwikeyServiceRegistr - Field Invoice Status - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Table 2376476057 - Field 1635153558 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Posted Service Invoice No.</source><target>Bókaður þjónustureikningur nr.</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table SCA.TWI.TwikeyServiceRegistr - Field Posted Service Invoice No. - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Table 2376476057 - Field 1157550427 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Twikey Invoice Id</source><target>Twikey-reikningskenni</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table SCA.TWI.TwikeyServiceRegistr - Field Twikey Invoice Id - Property Caption</note>
+        </trans-unit>
         <trans-unit id="Table 2666609899 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
           <source>Twikey Setup</source><target>Twikey-uppsetning</target>
           <note from="Developer" annotates="general" priority="2"></note>
@@ -348,6 +378,16 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Table SCA.TWI.TwikeySetup - Field Primary Key - Property Caption</note>
         </trans-unit>
+        <trans-unit id="Codeunit 574812255 - Method 2331973957 - NamedType 993997389" size-unit="char" translate="yes" xml:space="preserve">
+          <source>No implementation for fieldtype: "%1".</source><target>Engin innleiðing fyrir svæðisgerð: "%1".</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Codeunit SCA.TWI.JsonHelper - Method GetValueIntoField - NamedType NotImplemented</note>
+        </trans-unit>
+        <trans-unit id="Codeunit 574812255 - Method 3754832518 - NamedType 993997389" size-unit="char" translate="yes" xml:space="preserve">
+          <source>No implementation for fieldtype: "%1".</source><target>Engin innleiðing fyrir svæðisgerð: "%1".</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Codeunit SCA.TWI.JsonHelper - Method GetValueIntoFieldWithValidation - NamedType NotImplemented</note>
+        </trans-unit>
         <trans-unit id="Codeunit 1793454468 - NamedType 2128880793" size-unit="char" translate="yes" xml:space="preserve">
           <source>Twikey has not been set up correctly</source><target>Twikey hefur ekki verið rétt sett upp</target>
           <note from="Developer" annotates="general" priority="2"></note>
@@ -377,6 +417,16 @@
           <source>You have to select a contract template</source><target>Velja verður samningssniðmát</target>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Codeunit SCA.TWI.TwikeyMgt - Method GetContractTemplate - NamedType ContractTemplateSelErr</note>
+        </trans-unit>
+        <trans-unit id="Codeunit 1793454468 - Method 446519735 - NamedType 2667602313" size-unit="char" translate="yes" xml:space="preserve">
+          <source>%1 has been invited to sign the contract via Twikey!</source><target>%1 hefur verið boðið að undirrita samninginn í gegnum Twikey!</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Codeunit SCA.TWI.TwikeyMgt - Method InviteCustomer - NamedType Label10</note>
+        </trans-unit>
+        <trans-unit id="Codeunit 1793454468 - Method 446519735 - NamedType 3459614776" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Field Name %1 has not been set for Customer No. %2 and Contract Template Id %3</source><target>Heiti reits %1 hefur ekki verið stillt fyrir númer viðskiptamanns %2 og kenni samningssniðmáts %3</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Codeunit SCA.TWI.TwikeyMgt - Method InviteCustomer - NamedType Label20</note>
         </trans-unit>
         <trans-unit id="Codeunit 1793454468 - Method 446519735 - NamedType 1613578185" size-unit="char" translate="yes" xml:space="preserve">
           <source>%1 has been invited to sign the contract via Twikey!</source><target>%1 hefur verið boðið að undirrita samninginn í gegnum Twikey!</target>
@@ -423,6 +473,16 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Codeunit SCA.TWI.TwikeyMgt - Method SendCustLedgerEntriesToTwikey - NamedType Label2</note>
         </trans-unit>
+        <trans-unit id="Codeunit 1793454468 - Method 2493331554 - NamedType 1613578185" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Do you want to send these documents to Twikey?</source><target>Á að senda þessi skjöl til Twikey?</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Codeunit SCA.TWI.TwikeyMgt - Method SendCustLedgerEntriesToTwikeyConfirm - NamedType Label1</note>
+        </trans-unit>
+        <trans-unit id="Codeunit 1793454468 - Method 2493331554 - NamedType 975881568" size-unit="char" translate="yes" xml:space="preserve">
+          <source>The documents have been succesfully sent to Twikey.</source><target>Skjölin hafa verið send til Twikey.</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Codeunit SCA.TWI.TwikeyMgt - Method SendCustLedgerEntriesToTwikeyConfirm - NamedType Label2</note>
+        </trans-unit>
         <trans-unit id="Codeunit 1793454468 - Method 2836789011 - NamedType 975881568" size-unit="char" translate="yes" xml:space="preserve">
           <source>The sales invoices have been succesfully sent to Twikey.</source><target>Sölureikningarnir hafa verið sendir til Twikey.</target>
           <note from="Developer" annotates="general" priority="2"></note>
@@ -437,6 +497,21 @@
           <source>Invoice %1 has succesfully been sent to Twikey.</source><target>Reikningur %1 hefur verið sendur til Twikey.</target>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Codeunit SCA.TWI.TwikeyMgt - Method SendPostedSalesInvoiceToTwikey - NamedType Label2</note>
+        </trans-unit>
+        <trans-unit id="Codeunit 1793454468 - Method 2573598312 - NamedType 975881568" size-unit="char" translate="yes" xml:space="preserve">
+          <source>The service invoices have been succesfully sent to Twikey.</source><target>Þjónustureikningarnir hafa verið sendir til Twikey.</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Codeunit SCA.TWI.TwikeyMgt - Method SendPostedServiceInvoicesToTwikey - NamedType Label2</note>
+        </trans-unit>
+        <trans-unit id="Codeunit 1793454468 - Method 2414617329 - NamedType 1613578185" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Do you want to send this invoice to Twikey?</source><target>Á að senda þennan reikning til Twikey?</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Codeunit SCA.TWI.TwikeyMgt - Method SendPostedServiceInvoiceToTwikey - NamedType Label1</note>
+        </trans-unit>
+        <trans-unit id="Codeunit 1793454468 - Method 2414617329 - NamedType 975881568" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Invoice %1 has succesfully been sent to Twikey.</source><target>Reikningur %1 hefur verið sendur til Twikey.</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Codeunit SCA.TWI.TwikeyMgt - Method SendPostedServiceInvoiceToTwikey - NamedType Label2</note>
         </trans-unit>
         <trans-unit id="Codeunit 1793454468 - Method 4258112487 - NamedType 1613578185" size-unit="char" translate="yes" xml:space="preserve">
           <source>%1 has been invited to sign the contract via Twikey!</source><target>%1 hefur verið boðið að undirrita samninginn í gegnum Twikey!</target>
@@ -603,15 +678,30 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Page SCA.TWI.TwikeyLogEntry - Control ResponseText - Property Caption</note>
         </trans-unit>
+        <trans-unit id="Page 3611350946 - Control 1093812292 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Json Data Viewer</source><target>Json Gögn Áhorfandi</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page SCA.TWI.TwikeyLogEntry - Control JsonData - Property Caption</note>
+        </trans-unit>
         <trans-unit id="Page 2206473552 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
-          <source>Twikey Registrations</source><target>Twikey skráningar</target>
+          <source>Twikey Sales Registrations</source><target>Twikey söluskráningar</target>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Page SCA.TWI.TwikeyRegistrations - Property Caption</note>
         </trans-unit>
         <trans-unit id="Page 2812164912 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
-          <source>Twikey Registrations</source><target>Twikey skráningar</target>
+          <source>Twikey Sales Registrations</source><target>Twikey söluskráningar</target>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Page SCA.TWI.TwikeyRegistrationsAPI - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 2376476057 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Twikey Service Registrations</source><target>Twikey Service Skráningar</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page SCA.TWI.TwikeyServiceRegistr - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 2126850212 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Twikey Service Registrations</source><target>Twikey Service Skráningar</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page SCA.TWI.TwikeyServRegistrAPI - Property Caption</note>
         </trans-unit>
         <trans-unit id="Page 2666609899 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
           <source>Twikey Setup</source><target>Twikey-uppsetning</target>
@@ -652,6 +742,16 @@
           <source>Update Status</source><target>Staða uppfærslu</target>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Page SCA.TWI.TwikeySetup - Action UpdateStatus - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Report 3061425335 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Send Posted Sales Invoices to Twikey</source><target>Senda bókaða sölureikninga til Twikey</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Report SCA.TWI.SendSalesInvoices - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Report 2488134852 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Send Posted Service Invoices to Twikey</source><target>Senda bókaða þjónustureikninga til Twikey</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Report SCA.TWI.SendServiceInvoices - Property Caption</note>
         </trans-unit>
         <trans-unit id="PageExtension 1206817445 - Action 2683919842 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 523354100">
           <source>Invite Customer via Twikey</source><target>Bjóða viðskiptavini í gegnum Twikey</target>
@@ -742,6 +842,21 @@
           <source>Twikey Invoice Status</source><target>Staða Twikey-reiknings</target>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">TableExtension SCA.TWI.SalesInvoiceHeader - Field SCA.TWI.TwikeyInvoiceStatus - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 2494743339 - Field 4154990448 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3610197182">
+          <source>Twikey Alt. Contract Template</source><target>Twikey Alt. samningssniðmát</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension SCA.TWI.ServiceHeader - Field SCA.TWI.TwikeyContractTemplate - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 2138814236 - Field 4154990448 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3117283677">
+          <source>Twikey Alt. Contract Template</source><target>Twikey Alt. samningssniðmát</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension SCA.TWI.ServiceInvoiceHeader - Field SCA.TWI.TwikeyContractTemplate - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 2138814236 - Field 145278149 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3117283677">
+          <source>Twikey Invoice Status</source><target>Staða Twikey-reiknings</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension SCA.TWI.ServiceInvoiceHeader - Field SCA.TWI.TwikeyInvoiceStatus - Property Caption</note>
         </trans-unit>
       </group>
     </body>
