--- a/Translations/Twikey.it-CH.xlf
+++ b/Translations/Twikey.it-CH.xlf
@@ -318,6 +318,36 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Table SCA.TWI.TwikeyRegistration - Field Twikey Invoice Id - Property Caption</note>
         </trans-unit>
+        <trans-unit id="Table 2376476057 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Twikey Service Registration</source><target>Registrazione al servizio Twikey</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table SCA.TWI.TwikeyServiceRegistr - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Table 2376476057 - Field 883711285 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Entry No.</source><target>Nr. movimento</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table SCA.TWI.TwikeyServiceRegistr - Field Entry No. - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Table 2376476057 - Field 2641924796 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Invoice Payment URL</source><target>URL di pagamento della fattura</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table SCA.TWI.TwikeyServiceRegistr - Field Invoice Payment URL - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Table 2376476057 - Field 2452959191 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Invoice Status</source><target>Stato della fattura</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table SCA.TWI.TwikeyServiceRegistr - Field Invoice Status - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Table 2376476057 - Field 1635153558 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Posted Service Invoice No.</source><target>Fattura di servizio registrata n.</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table SCA.TWI.TwikeyServiceRegistr - Field Posted Service Invoice No. - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Table 2376476057 - Field 1157550427 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Twikey Invoice Id</source><target>ID fattura Twikey</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table SCA.TWI.TwikeyServiceRegistr - Field Twikey Invoice Id - Property Caption</note>
+        </trans-unit>
         <trans-unit id="Table 2666609899 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
           <source>Twikey Setup</source><target>Installazione di Twikey</target>
           <note from="Developer" annotates="general" priority="2"></note>
@@ -348,6 +378,16 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Table SCA.TWI.TwikeySetup - Field Primary Key - Property Caption</note>
         </trans-unit>
+        <trans-unit id="Codeunit 574812255 - Method 2331973957 - NamedType 993997389" size-unit="char" translate="yes" xml:space="preserve">
+          <source>No implementation for fieldtype: "%1".</source><target>Nessuna implementazione per il tipo di campo: "%1".</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Codeunit SCA.TWI.JsonHelper - Method GetValueIntoField - NamedType NotImplemented</note>
+        </trans-unit>
+        <trans-unit id="Codeunit 574812255 - Method 3754832518 - NamedType 993997389" size-unit="char" translate="yes" xml:space="preserve">
+          <source>No implementation for fieldtype: "%1".</source><target>Nessuna implementazione per il tipo di campo: "%1".</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Codeunit SCA.TWI.JsonHelper - Method GetValueIntoFieldWithValidation - NamedType NotImplemented</note>
+        </trans-unit>
         <trans-unit id="Codeunit 1793454468 - NamedType 2128880793" size-unit="char" translate="yes" xml:space="preserve">
           <source>Twikey has not been set up correctly</source><target>Twikey non è stato configurato correttamente</target>
           <note from="Developer" annotates="general" priority="2"></note>
@@ -377,6 +417,16 @@
           <source>You have to select a contract template</source><target>Devi selezionare un modello di contratto</target>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Codeunit SCA.TWI.TwikeyMgt - Method GetContractTemplate - NamedType ContractTemplateSelErr</note>
+        </trans-unit>
+        <trans-unit id="Codeunit 1793454468 - Method 446519735 - NamedType 2667602313" size-unit="char" translate="yes" xml:space="preserve">
+          <source>%1 has been invited to sign the contract via Twikey!</source><target>%1 è stato invitato a firmare il contratto tramite Twikey!</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Codeunit SCA.TWI.TwikeyMgt - Method InviteCustomer - NamedType Label10</note>
+        </trans-unit>
+        <trans-unit id="Codeunit 1793454468 - Method 446519735 - NamedType 3459614776" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Field Name %1 has not been set for Customer No. %2 and Contract Template Id %3</source><target>Nome campo %1 non è stato impostato per il numero cliente %2 e l'ID modello contratto %3</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Codeunit SCA.TWI.TwikeyMgt - Method InviteCustomer - NamedType Label20</note>
         </trans-unit>
         <trans-unit id="Codeunit 1793454468 - Method 446519735 - NamedType 1613578185" size-unit="char" translate="yes" xml:space="preserve">
           <source>%1 has been invited to sign the contract via Twikey!</source><target>%1 è stato invitato a firmare il contratto tramite Twikey!</target>
@@ -423,6 +473,16 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Codeunit SCA.TWI.TwikeyMgt - Method SendCustLedgerEntriesToTwikey - NamedType Label2</note>
         </trans-unit>
+        <trans-unit id="Codeunit 1793454468 - Method 2493331554 - NamedType 1613578185" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Do you want to send these documents to Twikey?</source><target>Vuoi inviare questi documenti a Twikey?</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Codeunit SCA.TWI.TwikeyMgt - Method SendCustLedgerEntriesToTwikeyConfirm - NamedType Label1</note>
+        </trans-unit>
+        <trans-unit id="Codeunit 1793454468 - Method 2493331554 - NamedType 975881568" size-unit="char" translate="yes" xml:space="preserve">
+          <source>The documents have been succesfully sent to Twikey.</source><target>I documenti sono stati inviati con successo a Twikey.</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Codeunit SCA.TWI.TwikeyMgt - Method SendCustLedgerEntriesToTwikeyConfirm - NamedType Label2</note>
+        </trans-unit>
         <trans-unit id="Codeunit 1793454468 - Method 2836789011 - NamedType 975881568" size-unit="char" translate="yes" xml:space="preserve">
           <source>The sales invoices have been succesfully sent to Twikey.</source><target>Le fatture di vendita sono state inviate con successo a Twikey.</target>
           <note from="Developer" annotates="general" priority="2"></note>
@@ -437,6 +497,21 @@
           <source>Invoice %1 has succesfully been sent to Twikey.</source><target>Invoice %1 è stato inviato con successo a Twikey.</target>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Codeunit SCA.TWI.TwikeyMgt - Method SendPostedSalesInvoiceToTwikey - NamedType Label2</note>
+        </trans-unit>
+        <trans-unit id="Codeunit 1793454468 - Method 2573598312 - NamedType 975881568" size-unit="char" translate="yes" xml:space="preserve">
+          <source>The service invoices have been succesfully sent to Twikey.</source><target>Le fatture dei servizi sono state inviate con successo a Twikey.</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Codeunit SCA.TWI.TwikeyMgt - Method SendPostedServiceInvoicesToTwikey - NamedType Label2</note>
+        </trans-unit>
+        <trans-unit id="Codeunit 1793454468 - Method 2414617329 - NamedType 1613578185" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Do you want to send this invoice to Twikey?</source><target>Vuoi inviare questa fattura a Twikey?</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Codeunit SCA.TWI.TwikeyMgt - Method SendPostedServiceInvoiceToTwikey - NamedType Label1</note>
+        </trans-unit>
+        <trans-unit id="Codeunit 1793454468 - Method 2414617329 - NamedType 975881568" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Invoice %1 has succesfully been sent to Twikey.</source><target>Invoice %1 è stato inviato con successo a Twikey.</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Codeunit SCA.TWI.TwikeyMgt - Method SendPostedServiceInvoiceToTwikey - NamedType Label2</note>
         </trans-unit>
         <trans-unit id="Codeunit 1793454468 - Method 4258112487 - NamedType 1613578185" size-unit="char" translate="yes" xml:space="preserve">
           <source>%1 has been invited to sign the contract via Twikey!</source><target>%1 è stato invitato a firmare il contratto tramite Twikey!</target>
@@ -559,7 +634,7 @@
           <note from="Xliff Generator" annotates="general" priority="3">Page SCA.TWI.TwikeyLogEntries - Property Caption</note>
         </trans-unit>
         <trans-unit id="Page 1973775548 - Action 2526477354 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve">
-          <source>Clear the list of all log entries.</source><target>Cancellare l'elenco di tutte le voci di log.</target>
+          <source>Clear the list of all log entries.</source><target>Cancellare la lista di tutte le voci di log.</target>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Page SCA.TWI.TwikeyLogEntries - Action Delete0days - Property ToolTip</note>
         </trans-unit>
@@ -603,15 +678,30 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Page SCA.TWI.TwikeyLogEntry - Control ResponseText - Property Caption</note>
         </trans-unit>
+        <trans-unit id="Page 3611350946 - Control 1093812292 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Json Data Viewer</source><target>Visualizzatore dati JSON</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page SCA.TWI.TwikeyLogEntry - Control JsonData - Property Caption</note>
+        </trans-unit>
         <trans-unit id="Page 2206473552 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
-          <source>Twikey Registrations</source><target>Registrazioni Twikey</target>
+          <source>Twikey Sales Registrations</source><target>Registrazioni vendite Twikey</target>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Page SCA.TWI.TwikeyRegistrations - Property Caption</note>
         </trans-unit>
         <trans-unit id="Page 2812164912 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
-          <source>Twikey Registrations</source><target>Registrazioni Twikey</target>
+          <source>Twikey Sales Registrations</source><target>Registrazioni vendite Twikey</target>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Page SCA.TWI.TwikeyRegistrationsAPI - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 2376476057 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Twikey Service Registrations</source><target>Registrazioni al servizio Twikey</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page SCA.TWI.TwikeyServiceRegistr - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 2126850212 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Twikey Service Registrations</source><target>Registrazioni al servizio Twikey</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page SCA.TWI.TwikeyServRegistrAPI - Property Caption</note>
         </trans-unit>
         <trans-unit id="Page 2666609899 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
           <source>Twikey Setup</source><target>Installazione di Twikey</target>
@@ -652,6 +742,16 @@
           <source>Update Status</source><target>Stato aggiornamento</target>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Page SCA.TWI.TwikeySetup - Action UpdateStatus - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Report 3061425335 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Send Posted Sales Invoices to Twikey</source><target>Invia fatture di vendita registrate a Twikey</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Report SCA.TWI.SendSalesInvoices - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Report 2488134852 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Send Posted Service Invoices to Twikey</source><target>Invia fatture di servizio registrate a Twikey</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Report SCA.TWI.SendServiceInvoices - Property Caption</note>
         </trans-unit>
         <trans-unit id="PageExtension 1206817445 - Action 2683919842 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 523354100">
           <source>Invite Customer via Twikey</source><target>Invita il cliente tramite Twikey</target>
@@ -742,6 +842,21 @@
           <source>Twikey Invoice Status</source><target>Stato della fattura Twikey</target>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">TableExtension SCA.TWI.SalesInvoiceHeader - Field SCA.TWI.TwikeyInvoiceStatus - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 2494743339 - Field 4154990448 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3610197182">
+          <source>Twikey Alt. Contract Template</source><target>Modello di contratto alternativo Twikey</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension SCA.TWI.ServiceHeader - Field SCA.TWI.TwikeyContractTemplate - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 2138814236 - Field 4154990448 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3117283677">
+          <source>Twikey Alt. Contract Template</source><target>Modello di contratto alternativo Twikey</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension SCA.TWI.ServiceInvoiceHeader - Field SCA.TWI.TwikeyContractTemplate - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 2138814236 - Field 145278149 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3117283677">
+          <source>Twikey Invoice Status</source><target>Stato della fattura Twikey</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension SCA.TWI.ServiceInvoiceHeader - Field SCA.TWI.TwikeyInvoiceStatus - Property Caption</note>
         </trans-unit>
         <trans-unit id="PermissionSet 4217017434 - Property 2879900210" maxwidth="30" size-unit="char" translate="yes" xml:space="preserve">
           <source>Twikey</source><target>Twikey ·</target>
